--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-datasheet-grid": "4.10.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
