--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,21 +1,69 @@
 {
-  "name": "clientapp",
-  "version": "0.0.0",
-  "scripts": {
-    "start": "echo Starting the development server && vite",
-    "dev": "vite",
-    "build": "vite build --emptyOutDir",
-    "preview": "vite preview"
-  },
+  "name": "itplus.testtask.front",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/x-data-grid": "^4.0.2",
+    "@types/offscreencanvas": "^2019.6.3",
+    "axios": "^0.21.3",
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.17.3",
+    "popper.js": "^1.16.0",
+    "react": "17.0.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-chartjs-2": "^3.0.4",
+    "react-dom": "16.11.0",
+    "react-query": "^3.21.1",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "^3.4.4",
+    "react-table": "^7.7.0",
+    "reactstrap": "8.1.1",
+    "sass": "^1.39.0",
+    "svgo": "1.3.0",
+    "victory": "^35.11.4"
   },
   "devDependencies": {
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2"
-  }
+    "@types/history": "4.7.3",
+    "@types/jest": "24.0.19",
+    "@types/node": "12.11.6",
+    "@types/react": "16.9.9",
+    "@types/react-bootstrap-table-next": "^4.0.15",
+    "@types/react-dom": "16.9.2",
+    "@types/react-router": "5.1.2",
+    "@types/react-router-dom": "5.1.0",
+    "@types/react-table": "^7.7.3",
+    "@types/reactstrap": "8.0.6",
+    "@typescript-eslint/parser": "^2.5.0",
+    "cross-env": "6.0.3",
+    "eslint": "^6.5.1",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
+    "nan": "^2.14.1",
+    "react-bootstrap-table2-editor": "^1.4.0",
+    "typescript": "^4.4.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "cross-env CI=true react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src/**/*.ts ./src/**/*.tsx"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
